# SDK

./: .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  INTERFACES.en.md  INTERFACES.md  PUBLISHING.md  README.en.md  README.md  RELEASE_NOTES.md  SECURITY-AUDIT.en.md  SECURITY-AUDIT.md  SECURITY-REMEDIATION-PLAN.en.md  SECURITY-REMEDIATION-PLAN.md  SECURITY.md  SIGNING.en.md  SIGNING.md  release-requirements.txt  release.sh  test-vectors.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  fuzzing.yml  release.yml  repository-maintainer.lock.yml  repository-maintainer.md  scorecard-analysis.yml
_integration/: DevSmoke.java  dev_smoke.mjs  dev_smoke.php  dev_smoke.py  probe.mjs
_tooling/: generate-vectors.mjs
go/: .golangci.yml  README.en.md  README.md  client.go  client_test.go  config.go  errors.go  fuzz_test.go  go.mod  hardening_test.go  signer.go  signer_test.go  stringify.go
go/examples/callback_verify/: main.go
go/examples/dev_smoke/: main.go
go/examples/pay_create/: main.go
go/examples/payout_create/: main.go
go/examples/query/: main.go
java/: README.en.md  README.md  checkstyle.xml  pom.xml  run-tests.sh
java/examples/: CallbackVerifyExample.java  PayCreateExample.java  PayoutCreateExample.java  QueryExample.java
java/src/main/java/cloud/cniia/openapi/sdk/: ApiException.java  ApiResponse.java  Client.java  Config.java  Environment.java  Json.java  Signer.java  TransportException.java
java/src/main/java/cloud/cniia/projectp/sdk/: ApiException.java  ApiResponse.java  Client.java  Config.java  Environment.java  Json.java  Signer.java  TransportException.java
java/tests/: GuardCheck.java  VectorTest.java
nodejs/: LICENSE  README.en.md  README.md  eslint.config.js  package-lock.json  package.json
nodejs/examples/: callback_verify.js  pay_create.js  payout_create.js
nodejs/src/: client.js  config.js  errors.js  index.d.ts  index.js  signer.js
nodejs/tests/: client.test.js  guards.test.js  signer.test.js
php/: README.en.md  README.md  autoload.php  composer.json
php/examples/: callback_verify.php  pay_create.php  payout_create.php
php/src/: Client.php  Config.php  Environment.php  Signer.php
php/src/Exception/: ApiException.php  TransportException.php
php/tests/: run.php
python/: README.en.md  README.md  pyproject.toml  requirements-ci.txt
python/examples/: callback_verify.py  pay_create.py  payout_create.py
python/openapi_sdk/: __init__.py  client.py  config.py  exceptions.py  signer.py
python/projectp_sdk/: __init__.py  client.py  config.py  exceptions.py  signer.py
python/tests/: test_client.py  test_signer.py
