[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openapi-sdk"
version = "1.0.0"
description = "商户支付 OpenAPI Python SDK（零第三方依赖）"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
authors = [{ name = "OpenAPI SDK" }]
keywords = ["payment", "openapi", "merchant"]

# 零第三方依赖：仅用标准库（urllib / json / hmac / hashlib / unittest）。
dependencies = []

[project.optional-dependencies]
# 测试也只用标准库 unittest，无需任何额外安装。
dev = []

[tool.setuptools]
packages = ["openapi_sdk"]
