[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bebebus-merchant-openapi-sdk"
version = "1.1.2"
description = "商户支付 OpenAPI Python SDK（零第三方依赖）"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "bebebus" }]
keywords = ["payment", "openapi", "merchant", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# 零第三方依赖：仅用标准库（urllib / json / hmac / hashlib / unittest）。
dependencies = []

[project.urls]
Homepage = "https://github.com/bebebus/SDK/tree/main/python"
Repository = "https://github.com/bebebus/SDK"
Issues = "https://github.com/bebebus/SDK/issues"

[project.optional-dependencies]
# 运行时仍为零第三方依赖；dev 额外提供静态检查工具。
dev = ["ruff==0.15.21"]

[tool.setuptools]
packages = ["openapi_sdk"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "SIM"]
ignore = ["E501"]
